Added header content

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,16 @@
   </head>
 
   <body>
-    $END$
+    <header>
+      <div class="large-hero">
+        <img src="assets/images/hero.jpg" />
+      </div>
+
+      <div class="hero-text-box">
+        <h1>Goodbye junk food. Hello super healthy meals.</h1>
+        <a href="#">I’m hungry</a>
+        <a href="#">Show me more</a>
+      </div>
+    </header>
   </body>
 </html>
