--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,90 @@
       </div>
     </section>
 
+    <section class="meals-section">
+      <ul class="meals-section__meals-showcase">
+        <li>
+          <figure class="meals-section__meal-photo">
+            <img
+              src="assets/images/1.jpg"
+              alt="Korean bibimbap with egg and vegetables"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure class="meals-section__meal-photo">
+            <img
+              src="assets/images/2.jpg"
+              alt="Simple italian pizza with cherry tomatoes"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure class="meals-section__meal-photo">
+            <img
+              src="assets/images/3.jpg"
+              alt="Chicken breast steak with vegetables"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure class="meals-section__meal-photo">
+            <img src="assets/images/4.jpg" alt="Autumn pumpkin soup" />
+          </figure>
+        </li>
+      </ul>
+      <ul class="meals-section__meals-showcase">
+        <li>
+          <figure class="meals-section__meal-photo">
+            <img
+              src="assets/images/5.jpg"
+              alt="Paleo beef steak with vegetables"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure class="meals-section__meal-photo">
+            <img
+              src="assets/images/6.jpg"
+              alt="Healthy baguette with egg and vegetables"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure class="meals-section__meal-photo">
+            <img
+              src="assets/images/7.jpg"
+              alt="Burger with cheddar and bacon "
+            />
+          </figure>
+        </li>
+        <li>
+          <figure class="meals-section__meal-photo">
+            <img
+              src="assets/images/8.jpg"
+              alt="Granola with cherries and strawberries"
+            />
+          </figure>
+        </li>
+      </ul>
+    </section>
+
     <script src="https://unpkg.com/ionicons@4.5.9-1/dist/ionicons.js"></script>
   </body>
 </html>
+
+<!--
+Section 2: Favorite meals
+Title: None
+
+1.	Korean bibimbap with egg and vegetables
+2.	Simple italian pizza with cherry tomatoes 
+3.	Chicken breast steak with vegetables  
+4.	Autumn pumpkin soup
+5.	Paleo beef steak with vegetables
+6.	Healthy baguette with egg and vegetables
+7.	Burger with cheddar and bacon 
+8.	Granola with cherries and strawberries
+
+(see image numbers in the assets folder)
+-->
