Completed how-it-works section

--- a/app/index.html
+++ b/app/index.html
@@ -95,7 +95,7 @@
     </section>
 
     <section class="meals-section">
-      <ul class="meals-section__meals-showcase">
+      <ul class="meals-section__meals-showcase clearfix">
         <li>
           <figure class="meals-section__meal-photo">
             <img
@@ -126,7 +126,7 @@
           </figure>
         </li>
       </ul>
-      <ul class="meals-section__meals-showcase">
+      <ul class="meals-section__meals-showcase clearfix">
         <li>
           <figure class="meals-section__meal-photo">
             <img
@@ -162,22 +162,64 @@
       </ul>
     </section>
 
+    <section class="steps-section">
+      <div class="row">
+        <h2>How it works &mdash; Simple as 1, 2, 3</h2>
+      </div>
+
+      <div class="row">
+        <div class="col span-1-of-2 steps-section__box">
+          <img
+            src="assets/images/app-iPhone.png"
+            alt="Omnifood app on iPhone"
+            class="steps-section__app-screen"
+          />
+        </div>
+
+        <div class="col span-1-of-2 steps-section__box">
+          <div class="steps-section__works-step">
+            <div>1</div>
+            <p>
+              Choose the subscription plan that best fits your needs and sign up
+              today.
+            </p>
+          </div>
+          <div class="steps-section__works-step">
+            <div>2</div>
+            <p>
+              Order your delicious meal using our mobile app or website. Or you
+              can even call us!
+            </p>
+          </div>
+          <div class="steps-section__works-step">
+            <div>3</div>
+            <p>
+              Enjoy your meal after less than 20 minutes. See you the next time!
+            </p>
+          </div>
+
+          <a href="#" class="btn--app"
+            ><img src="assets/images/download-app.svg" alt="App Store Button"
+          /></a>
+          <a href="#" class="btn--app"
+            ><img
+              src="assets/images/download-app-android.png"
+              alt="Play Store Button"
+          /></a>
+        </div>
+      </div>
+    </section>
+
     <script src="https://unpkg.com/ionicons@4.5.9-1/dist/ionicons.js"></script>
   </body>
 </html>
 
 <!--
-Section 2: Favorite meals
-Title: None
+Section 3: How it works
+Title: How it works - Simple as 1, 2, 3
 
-1.	Korean bibimbap with egg and vegetables
-2.	Simple italian pizza with cherry tomatoes 
-3.	Chicken breast steak with vegetables  
-4.	Autumn pumpkin soup
-5.	Paleo beef steak with vegetables
-6.	Healthy baguette with egg and vegetables
-7.	Burger with cheddar and bacon 
-8.	Granola with cherries and strawberries
+1.	Choose the subscription plan that best fits your needs and sign up today.
+2.	Order your delicious meal using our mobile app or website. Or you can even call us!
+3.	Enjoy your meal after less than 20 minutes. See you the next time!
 
-(see image numbers in the assets folder)
 -->
