--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@
       </div>
 
       <div class="row">
-        <div class="col span-1-of-4 features-section__box">
+        <div class="col span-1-of-4 box">
           <ion-icon name="infinite" class="icon--big"></ion-icon>
           <h3>Up to 365 days/year</h3>
           <p>
@@ -62,7 +62,7 @@
           </p>
         </div>
 
-        <div class="col span-1-of-4 features-section__box">
+        <div class="col span-1-of-4 box">
           <ion-icon name="stopwatch" class="icon--big"></ion-icon>
           <h3>Ready in 20 minutes</h3>
           <p>
@@ -72,7 +72,7 @@
           </p>
         </div>
 
-        <div class="col span-1-of-4 features-section__box">
+        <div class="col span-1-of-4 box">
           <ion-icon name="nutrition" class="icon--big"></ion-icon>
           <h3>100% organic</h3>
           <p>
@@ -82,7 +82,7 @@
           </p>
         </div>
 
-        <div class="col span-1-of-4 features-section__box">
+        <div class="col span-1-of-4 box">
           <ion-icon name="cart" class="icon--big"></ion-icon>
           <h3>Order anything</h3>
           <p>
@@ -210,16 +210,87 @@
       </div>
     </section>
 
+    <section class="cities-section">
+      <div class="row">
+        <h2>We're currently in these cities</h2>
+      </div>
+
+      <div class="row">
+        <div class="col span-1-of-4 box">
+          <img src="assets/images/lisbon-3.jpg" alt="Lisbon" />
+          <h3>Lisbon</h3>
+          <div class="city-feature">
+            <ion-icon name="person" class="icon--small"></ion-icon>
+            1600+ happy eaters
+          </div>
+          <div class="city-feature">
+            <ion-icon name="star" class="icon--small"></ion-icon>
+            60+ top chefs
+          </div>
+          <div class="city-feature">
+            <ion-icon name="logo-twitter" class="icon--small"></ion-icon>
+            <a href="#">@omnifood_lx</a>
+          </div>
+        </div>
+
+        <div class="col span-1-of-4 box">
+          <img src="assets/images/san-francisco.jpg" alt="San Francisco" />
+          <h3>San Francisco</h3>
+          <div class="city-feature">
+            <ion-icon name="person" class="icon--small"></ion-icon>
+            3700+ happy eaters
+          </div>
+          <div class="city-feature">
+            <ion-icon name="star" class="icon--small"></ion-icon>
+            160+ top chefs
+          </div>
+          <div class="city-feature">
+            <ion-icon name="logo-twitter" class="icon--small"></ion-icon>
+            <a href="#">@omnifood_sf</a>
+          </div>
+        </div>
+
+        <div class="col span-1-of-4 box">
+          <img src="assets/images/berlin.jpg" alt="Berlin" />
+          <h3>Berlin</h3>
+          <div class="city-feature">
+            <ion-icon name="person" class="icon--small"></ion-icon>
+            2300+ happy eaters
+          </div>
+          <div class="city-feature">
+            <ion-icon name="star" class="icon--small"></ion-icon>
+            110+ top chefs
+          </div>
+          <div class="city-feature">
+            <ion-icon name="logo-twitter" class="icon--small"></ion-icon>
+            <a href="#">@omnifood_berlin</a>
+          </div>
+        </div>
+
+        <div class="col span-1-of-4 box">
+          <img src="assets/images/london.jpg" alt="London" />
+          <h3>London</h3>
+          <div class="city-feature">
+            <ion-icon name="person" class="icon--small"></ion-icon>
+            1200+ happy eaters
+          </div>
+          <div class="city-feature">
+            <ion-icon name="star" class="icon--small"></ion-icon>
+            50+ top chefs
+          </div>
+          <div class="city-feature">
+            <ion-icon name="logo-twitter" class="icon--small"></ion-icon>
+            <a href="#">@omnifood_london</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="https://unpkg.com/ionicons@4.5.9-1/dist/ionicons.js"></script>
   </body>
 </html>
 
 <!--
-Section 3: How it works
-Title: How it works - Simple as 1, 2, 3
 
-1.	Choose the subscription plan that best fits your needs and sign up today.
-2.	Order your delicious meal using our mobile app or website. Or you can even call us!
-3.	Enjoy your meal after less than 20 minutes. See you the next time!
 
 -->
