--- a/app/index.html
+++ b/app/index.html
@@ -515,21 +515,63 @@
       </div>
     </section>
 
+    <footer>
+      <div class="row">
+        <div class="col span-1-of-2">
+          <ul class="footer-nav">
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">iOS App</a></li>
+            <li><a href="#">Android App</a></li>
+          </ul>
+        </div>
+
+        <div class="col span-1-of-2">
+          <ul class="social-links">
+            <li>
+              <a href="#"
+                ><ion-icon
+                  name="logo-facebook"
+                  class="ion-social-facebook"
+                ></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a href="#"
+                ><ion-icon
+                  name="logo-twitter"
+                  class="ion-social-twitter"
+                ></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a href="#"
+                ><ion-icon
+                  name="logo-googleplus"
+                  class="ion-social-googleplus"
+                ></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a href="#"
+                ><ion-icon
+                  name="logo-instagram"
+                  class="ion-social-instagram"
+                ></ion-icon
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="row">
+        <p>
+          Copyright &copy; 2019 by Omnifood. All rights reserved.
+        </p>
+      </div>
+    </footer>
+
     <script src="https://unpkg.com/ionicons@4.5.9-1/dist/ionicons.js"></script>
   </body>
 </html>
-
-<!--
-Section 8: Footer
-Title: None
-
-Navigation:
-1. About us
-2. Blog
-3. Press
-4. iOS App
-5. Android App
-
-Also include links to facebook, twitter, google+ and Instagram accounts.
-
--->
