--- a/app/index.html
+++ b/app/index.html
@@ -574,4 +574,8 @@
 
     <script src="https://unpkg.com/ionicons@4.5.9-1/dist/ionicons.js"></script>
   </body>
+
+  <script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
+  <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="//cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
 </html>
