Added sticky navigation functionality

--- a/app/index.html
+++ b/app/index.html
@@ -17,13 +17,18 @@
   <body>
     <header>
       <nav>
-        <div class="row main-nav">
+        <div class="row">
           <img
             src="assets/images/logo-white.png"
             alt="Omnifood logo"
-            class="main-nav__logo"
+            class="logo"
           />
-          <ul class="main-nav__list">
+          <img
+            src="assets/images/logo.png"
+            alt="Omnifood logo"
+            class="logo--black"
+          />
+          <ul class="main-nav">
             <li><a href="#">Food delivery</a></li>
             <li><a href="#">How it works</a></li>
             <li><a href="#">Our cities</a></li>
@@ -41,7 +46,7 @@
       </div>
     </header>
 
-    <section class="features-section">
+    <section class="features-section features-section--js">
       <div class="row">
         <h2>Get food fast &mdash; not fast food.</h2>
         <p class="features-section__long-copyright">
@@ -573,9 +578,10 @@
     </footer>
 
     <script src="https://unpkg.com/ionicons@4.5.9-1/dist/ionicons.js"></script>
-  </body>
+    <script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
+    <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="//cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
 
-  <script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
-  <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="//cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
+    <script src="/temp/scripts/App.js"></script>
+  </body>
 </html>
